<package>

  <name>pr2_ft_moveit_config</name>
  <version>0.4.3</version>
  <description>
     Configuration and launch files for using the PR2 robot with force-torque sensors with the MoveIt Motion Planning Framework
  </description>
  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <run_depend>moveit_ros_move_group</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
