<package>

  <name>pr2_ft_moveit_config</name>
  <version>0.4.3</version>
  <description>
     Configuration and launch files for using the PR2 robot with force-torque sensors with the MoveIt Motion Planning Framework
  </description>
  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pr2_ft_moveit_config</url>
  <url type="bugtracker">https://github.com/kth-ros-pkg/pr2_ft_moveit_config/issues</url>
  <url type="repository">https://github.com/kth-ros-pkg/pr2_ft_moveit_config.git</url>

  <run_depend>moveit_ros_move_group</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
